# patricia-trie

./: .travis.yml  CHANGELOG.md  README.md  README.rst  mypy.ini  pyproject.toml  time_marisa.py  time_patricia.py
patricia/: __init__.py
tests/: README.md  test__bench.py  test__trie.py  test_patricia.py
