[tool.poetry]
name = "patricia-trie"
version = "10"
description = "A pure Python implementation of a PATRICIA trie."
readme = "README.rst"
repository = "https://github.com/mitsuse/patricia-trie"
authors = [
    "Florian Leitner <florian.leitner@gmail.com>",
    "Tomoya Kose <tomoya@mitsuse.jp>"
]
license = "Apache-2.0"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
